# MergeGaurd

./: .env.example  .gitignore  Dockerfile  README.md  TEST_TRIGGER.md  action.yml  docker-entrypoint.sh  mergeguard_build_plan_a6f76612.plan.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  mergeguard-review.yml
docs/ai-reviewer/: example-mergeguard.yml
infra/: Dockerfile  Dockerfile.lambda  app.yaml  infra.yaml
memory/: MEMORY.md  feedback_review_format.md  project_mergeguard.md
src/mergeguard/: __init__.py  cli.py  config.py  lambda_handler.py
src/mergeguard/agents/: architecture.py  base.py  code_quality.py  orchestrator.py  regression.py  security.py
src/mergeguard/context/: __init__.py  repo_context.py
src/mergeguard/diff/: hunk_mapper.py  parser.py
src/mergeguard/feedback/: __init__.py  dynamodb_store.py  retrieval.py  s3_sync.py  store.py
src/mergeguard/integrations/: bedrock.py  github.py  github_app.py
src/mergeguard/intelligence/: cache.py  call_graph_builder.py  change_classifier.py  dependency_graph.py  symbol_extractor.py  tree_sitter_loader.py
src/mergeguard/limits/: __init__.py  rate_limiter.py
src/mergeguard/scoring/: impact.py  pr_score.py  severity.py
src/mergeguard/telemetry/: tracing.py
src/mergeguard/tools/: ast_query.py  callgraph_query.py  dep_lookup.py  feedback_sync.py  fetch_pr_diff.py  github_poster.py  impact_analyzer.py  (+1 more)
tests/integration/: test_diff_to_symbols.py
tests/unit/: test_architecture_import_diff.py  test_change_classifier.py  test_diff_parser.py  test_hunk_mapper.py  test_impact_analyzer.py  test_impact_scorer.py  test_rate_limiter.py  test_regression_deterministic.py  test_repo_context.py  test_risk_scorer.py  test_severity.py
(+3 files in other folders)
